--- a/index.html
+++ b/index.html
@@ -56,12 +56,8 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                       <!--  <li><a class="page-scroll" href="#page-top">Home</a></li>
-                        <li><a class="page-scroll" href="#features">Features</a></li>
-                        <li><a class="page-scroll" href="#team">Team</a></li>
-                        <li><a class="page-scroll" href="#testimonials">Testimonials</a></li>
                         <li><a class="page-scroll" href="#pricing">Pricing</a></li>
-                        <li><a class="page-scroll" href="#contact">Contact</a></li> -->
+                        <li><a class="page-scroll" href="#contact">Contact</a></li>
                         <li><a class="page-scroll" href="http://app.pocketphys.io">Login</a></li>
                     </ul>
                 </div>
@@ -233,6 +229,41 @@
             <a class="btn btn-lg btn-primary" href="http://eepurl.com/bp5ZPP" role="button">Try for free</a>
 </div>
     </div>
+</section>
+
+<section id="pricing" class="pricing">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <div class="navy-line"></div>
+        <h1>App Pricing</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 wow zoomIn animated">
+        <ul class="pricing-plan list-unstyled">
+          <li class="pricing-title">Individual</li>
+          <li class="pricing-desc">a single physio login</li>
+          <li class="pricing-price"><span>$50</span> / month</li>
+          <li></li>
+          <li>
+            <a class="btn btn-primary btn-xs" href="http://app.pocketphysio.io/signup?plan=individual">Sign Up</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-lg-6 wow zoomIn animated">
+        <ul class="pricing-plan list-unstyled">
+          <li class="pricing-title">Clinic</li>
+          <li class="pricing-desc">3 physio logins</li>
+          <li class="pricing-price"><span>$100</span> / month</li>
+          <li></li>
+          <li>
+            <a class="btn btn-primary btn-xs" href="http://app.pocketphysio.io/signup?plan=clinic">Sign Up</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </section>
 
 <section id="contact" class="gray-section contact">
