Finishes payment plans, fixes header nav to be visible, fixes links to the app

--- a/index.html
+++ b/index.html
@@ -243,9 +243,10 @@
       <div class="col-lg-6 wow zoomIn animated">
         <ul class="pricing-plan list-unstyled">
           <li class="pricing-title">Individual</li>
-          <li class="pricing-desc">a single physio login</li>
-          <li class="pricing-price"><span>$50</span> / month</li>
-          <li></li>
+          <li class="pricing-desc">single physio account</li>
+          <li class="pricing-price"><span>$49</span> / month</li>
+          <li>create unlimited physio plans</li>
+          <li>share plans with patients</li>
           <li>
             <a class="btn btn-primary btn-xs" href="http://app.pocketphysio.io/signup?plan=individual">Sign Up</a>
           </li>
@@ -253,12 +254,13 @@
       </div>
       <div class="col-lg-6 wow zoomIn animated">
         <ul class="pricing-plan list-unstyled">
-          <li class="pricing-title">Clinic</li>
-          <li class="pricing-desc">3 physio logins</li>
-          <li class="pricing-price"><span>$100</span> / month</li>
-          <li></li>
+          <li class="pricing-title">Agency</li>
+          <li class="pricing-desc">unlimited physio accounts</li>
+          <li class="pricing-price"><span>$89</span> / month</li>
+          <li>create unlimited physio plans</li>
+          <li>share plans with patients</li>
           <li>
-            <a class="btn btn-primary btn-xs" href="http://app.pocketphysio.io/signup?plan=clinic">Sign Up</a>
+            <a class="btn btn-primary btn-xs" href="http://app.pocketphysio.io/signup?plan=agency">Sign Up</a>
           </li>
         </ul>
       </div>
