change link to app register page

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           <li>create unlimited physio plans</li>
           <li>share plans with patients</li>
           <li>
-            <a class="btn btn-primary btn-xs" href="http://app.pocketphysio.io/signup?plan=individual">Sign Up</a>
+            <a class="btn btn-primary btn-xs" href="http://app.pocketphysio.io/register?plan=individual">Sign Up</a>
           </li>
         </ul>
       </div>
@@ -260,7 +260,7 @@
           <li>create unlimited physio plans</li>
           <li>share plans with patients</li>
           <li>
-            <a class="btn btn-primary btn-xs" href="http://app.pocketphysio.io/signup?plan=agency">Sign Up</a>
+            <a class="btn btn-primary btn-xs" href="http://app.pocketphysio.io/register?plan=agency">Sign Up</a>
           </li>
         </ul>
       </div>
